; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/devfs/extr_devfs_vnops.c_devfs_kqfilter_f.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/devfs/extr_devfs_vnops.c_devfs_kqfilter_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { %struct.file* }
%struct.file = type { i32 }
%struct.knote = type { i32 }
%struct.cdev = type { i32 }
%struct.cdevsw = type { i32 (%struct.cdev.0*, %struct.knote*)* }
%struct.cdev.0 = type opaque

@curthread = common dso_local global %struct.thread* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, %struct.knote*)* @devfs_kqfilter_f to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @devfs_kqfilter_f(%struct.file* %0, %struct.knote* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.knote*, align 8
  %6 = alloca %struct.cdev*, align 8
  %7 = alloca %struct.cdevsw*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.file*, align 8
  %11 = alloca %struct.thread*, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store %struct.knote* %1, %struct.knote** %5, align 8
  %12 = load %struct.thread*, %struct.thread** @curthread, align 8
  store %struct.thread* %12, %struct.thread** %11, align 8
  %13 = load %struct.thread*, %struct.thread** %11, align 8
  %14 = getelementptr inbounds %struct.thread, %struct.thread* %13, i32 0, i32 0
  %15 = load %struct.file*, %struct.file** %14, align 8
  store %struct.file* %15, %struct.file** %10, align 8
  %16 = load %struct.file*, %struct.file** %4, align 8
  %17 = call i32 @devfs_fp_check(%struct.file* %16, %struct.cdev** %6, %struct.cdevsw** %7, i32* %9)
  store i32 %17, i32* %8, align 4
  %18 = load i32, i32* %8, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %2
  %21 = load i32, i32* %8, align 4
  store i32 %21, i32* %3, align 4
  br label %37

22:                                               ; preds = %2
  %23 = load %struct.cdevsw*, %struct.cdevsw** %7, align 8
  %24 = getelementptr inbounds %struct.cdevsw, %struct.cdevsw* %23, i32 0, i32 0
  %25 = load i32 (%struct.cdev.0*, %struct.knote*)*, i32 (%struct.cdev.0*, %struct.knote*)** %24, align 8
  %26 = load %struct.cdev*, %struct.cdev** %6, align 8
  %27 = bitcast %struct.cdev* %26 to %struct.cdev.0*
  %28 = load %struct.knote*, %struct.knote** %5, align 8
  %29 = call i32 %25(%struct.cdev.0* %27, %struct.knote* %28)
  store i32 %29, i32* %8, align 4
  %30 = load %struct.file*, %struct.file** %10, align 8
  %31 = load %struct.thread*, %struct.thread** %11, align 8
  %32 = getelementptr inbounds %struct.thread, %struct.thread* %31, i32 0, i32 0
  store %struct.file* %30, %struct.file** %32, align 8
  %33 = load %struct.cdev*, %struct.cdev** %6, align 8
  %34 = load i32, i32* %9, align 4
  %35 = call i32 @dev_relthread(%struct.cdev* %33, i32 %34)
  %36 = load i32, i32* %8, align 4
  store i32 %36, i32* %3, align 4
  br label %37

37:                                               ; preds = %22, %20
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i32 @devfs_fp_check(%struct.file*, %struct.cdev**, %struct.cdevsw**, i32*) #1

declare dso_local i32 @dev_relthread(%struct.cdev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
